# Ecommerce-Django_API

./: README.md  api_client.py  pyproject.toml
ecommerce/: db.sqlite3  main.py
ecommerce/api/: urls.py  views.py
ecommerce/ecommerce/: manage.py  settings.py
ecommerce/ecommerce/api/: serializers.py
ecommerce/ecommerce/ecommerce/: urls.py
ecommerce/ecommerce/loja/: decorators.py  forms.py  models.py  views.py
ecommerce/ecommerce/loja/migrations/: 0001_initial.py  0006_purchase.py  0007_purchase_seller_purchase_status.py
ecommerce/ecommerce/loja/templates/loja/: buy_product.html  category_detail.html  delete_product.html  edit_product.html  follow_shopping.html  home.html  login.html  my_items.html  offer_product.html  product_detail.html  product_search.html
ecommerce/loja/: context_processors.py  urls.py
ecommerce/loja/migrations/: 0002_customuser.py  0003_products_image_products_views.py  0004_products_user.py  0005_alter_books_options_alter_phones_options_and_more.py
ecommerce/loja/static/css/: styles.css
ecommerce/loja/templates/: base.html
ecommerce/loja/templates/loja/: register.html  user_settings.html
